removed dependence on enum_flags lib

--- a/boards/discoveryf3/examples/spi_gyro/Makefile
+++ b/boards/discoveryf3/examples/spi_gyro/Makefile
@@ -50,7 +50,7 @@ include $(BOARD_DIR)/board.mk
 # Include Directories
 #################################
 
-INCLUDE_DIRS += $(realpath $(BOARD_DIR)../../lib/enum-flags/include)
+INCLUDE_DIRS +=
 
 #################################
 # Source Files
