demonstrate changing usb mfr string

--- a/boards/revo/examples/vcp/Makefile
+++ b/boards/revo/examples/vcp/Makefile
@@ -32,6 +32,8 @@ TARGET = vcp
 
 DEBUG ?= GDB
 
+FIRMWARE_NAME_STRING = "custom firmware name"
+
 #################################
 # Working directories
 #################################
